OO-4944: need to move to the hotspots